# fractals

./: .gitignore  .gitmodules  asset-manifest.json  index.html
backend/: CMakeLists.txt  back
backend/back_autogen/: moc_predefs.h
backend/headers/: complexnum.h
backend/includes/: httplib.h
backend/src/: complexnum.cpp  main.cpp
frontend/: webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  impelixmain.code-profile  index.tsx
frontend/src/components/: CustomColorMenu.tsx  Mandelbrot.tsx
static/css/: main.fd9ac477.css
static/js/: main.09102585.js  main.09102585.js.map  main.132619e0.js  main.132619e0.js.map  main.1a47acf6.js  main.1a47acf6.js.map  main.84fce2a3.js  main.84fce2a3.js.map  main.892efaf7.js  main.892efaf7.js.map  main.f3dde9c9.js  main.f3dde9c9.js.map
